progress to wave wrap bug

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@ box-sizing: border-box;
 font-family: "Roboto", sans-serif;
 }
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden ;
+}
+
 nav {
   height: 80px;
   display: flex;
@@ -21,6 +26,7 @@ p {
 .nav__container {
   width: 100%;
   max-width: 1200px;
+  padding: 0 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -73,24 +79,6 @@ header {
   height: calc(100vh - 80px);
 }
 
-.header__container {
-  padding-top: 32px;
-  width: 100%;
-  max-width: 720px;
-  margin: 0 auto;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.header__description {
-  padding-top: 26px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 h1 {
   font-size: 56px;
   color: #7342d6;
@@ -122,10 +110,25 @@ button:active {
 }
 
 .header__img--wrapper {
-  width: 100%;
-  height: 100%;
-  max-height: 50vh;
   padding: 20px;
+  z-index: 2;
+}
+
+.header__container {
+  padding-top: 32px;
+  width: 100%;
+  max-width: 720px;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.header__description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container {
@@ -155,15 +158,25 @@ HIGHLIGHTS
   width: 101vw;
   height: 12vw;
   top: 1px;
-  left:0;
-  z-index:1;
+  left: 0;
+  z-index: 1;
   background-size: cover;
   background-repeat: no-repeat;
   transform: translateY(-100%);
 }
 
 #highlights:after {
-  content: "testingsidsiduf"
+  background: url('assets-20250701T035019Z-1-001/assets/wave.svg');
+  content: "";
+  position: absolute;
+  width: 10v0w;
+  height: 12vw;
+  bottom: 1px;
+  left: 0;
+  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transform: translateY(100%) rotate(180deg);
 }
 
 .highlight__wrapper {
@@ -186,7 +199,7 @@ HIGHLIGHTS
 
 .highlight__img {
   border: 4px solid lightgrey;
-  color: #7342d6;
+  color: #7342d648;
   width: 100px;
   height: 100px;
   display: flex;
@@ -203,7 +216,15 @@ HIGHLIGHTS
   margin-bottom: 16px;
 }
 
+/*
 
+FEATURES
 
+*/
+
+#features {
+  height: 1000px;
+  background-color: rgba( 115, 66, 214, 0.1);
+}
 
 
